--- a/hebrews-coffee-site/.svelte-kit/output/prerendered/pages/place-order.html
+++ b/hebrews-coffee-site/.svelte-kit/output/prerendered/pages/place-order.html
@@ -4,39 +4,40 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.BdpqRjtK.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/app.B6o2F3Li.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D-j50wLN.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CiOQUtVp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B0ugiPo6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DN-Y5FX1.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CGPmaplP.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DsnmJJEf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D5Qwt-z6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DuKA917J.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B3K-TgRg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D5Elu2hf.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.oaIfD8KI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B298ACMR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DYACF6Ii.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.hzqAw8Z4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DeJ2Ftms.js">
+		<link href="/hebrews-coffee-site/_app/immutable/assets/0.BdpqRjtK.css" rel="stylesheet">
+		<link href="/hebrews-coffee-site/_app/immutable/assets/app.Db6sXKQR.css" rel="stylesheet">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/entry/start.C5QvC3Uf.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/D-Lfi2MX.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/mZYaVlXh.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/4tRy_9DW.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/entry/app.D4XaPhHc.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/DsnmJJEf.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/YaMAKQ02.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/ihxhlco1.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/BvnH6WBI.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/GZJ2z3rj.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/nodes/0.D9VCZPon.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/0z1sJvhk.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/Zq5Smagp.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/C3qje7M7.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/nodes/5.Vq3Hpini.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/Cg3IBsHc.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><header class="top-bar svelte-158cp0c"><button class="hamburger-menu-icon svelte-158cp0c"><img src="/icons/hamburger_menu.svg" alt="Menu" class="svelte-158cp0c"/></button> <a class="logo-button svelte-158cp0c" href="/"><img src="/logo.svg" alt="Hebrews Coffee Logo" class="logo svelte-158cp0c"/></a> <div class="login-link svelte-158cp0c"><a href="/login" class="svelte-158cp0c">LOGIN</a></div></header> <div class="side-menu svelte-158cp0c"><button class="menu-close-icon svelte-158cp0c"><img src="/icons/x_icon.svg" alt="Close Menu" class="svelte-158cp0c"/></button> <nav class="svelte-158cp0c"><a href="/" class="svelte-158cp0c">Home</a> <a href="/place-order" class="svelte-158cp0c">Place Order</a> <a href="/check-order" class="svelte-158cp0c">Check Order Status</a></nav> <div id="login" class="svelte-158cp0c"><a href="/login" class="svelte-158cp0c">Login</a></div></div> <main class="svelte-158cp0c"><!----><!----><div class="order-page"><h1 style="margin-top: 1rem;">Place Order</h1> <div class="order-buttons"><a class="bar-button" href="/place-order/latte">Latte</a> <a class="bar-button" href="/place-order/americano">Americano</a> <a class="bar-button" href="/place-order/cold-brew">Cold Brew</a> <a class="bar-button" href="/place-order/chai-latte">Chai Latte</a> <a class="bar-button" href="/place-order/dirty-chai-latte">Dirty Chai Latte</a> <a class="bar-button" href="/place-order/london-fog">London Fog</a> <a class="bar-button" href="/place-order/hot-chocolate">Hot Chocolate</a> <a class="bar-button" href="/place-order/iced-tea">Iced Tea</a></div></div><!----><!----></main><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><header class="top-bar svelte-158cp0c"><button class="hamburger-menu-icon svelte-158cp0c"><img src="/hebrews-coffee-site/icons/hamburger_menu.svg" alt="Menu" class="svelte-158cp0c"/></button> <a class="logo-button svelte-158cp0c" href="/"><img src="/hebrews-coffee-site/icons/logo.svg" alt="Hebrews Coffee Logo" class="logo svelte-158cp0c"/></a> <div class="login-link svelte-158cp0c"><a href="/login" class="svelte-158cp0c">LOGIN</a></div></header> <div class="side-menu svelte-158cp0c"><button class="menu-close-icon svelte-158cp0c"><img src="/hebrews-coffee-site/icons/x_icon.svg" alt="Close Menu" class="svelte-158cp0c"/></button> <nav class="svelte-158cp0c"><a href="/" class="svelte-158cp0c">Home</a> <a href="/place-order" class="svelte-158cp0c">Place Order</a> <a href="/check-order" class="svelte-158cp0c">Check Order Status</a></nav> <div id="login" class="svelte-158cp0c"><a href="/login" class="svelte-158cp0c">Login</a></div></div> <main class="svelte-158cp0c"><!----><!----><div class="order-page"><h1 style="margin-top: 1rem;">Place Order</h1> <div class="order-buttons"><a class="bar-button" href="/place-order/latte">Latte</a> <a class="bar-button" href="/place-order/americano">Americano</a> <a class="bar-button" href="/place-order/cold-brew">Cold Brew</a> <a class="bar-button" href="/place-order/chai-latte">Chai Latte</a> <a class="bar-button" href="/place-order/dirty-chai-latte">Dirty Chai Latte</a> <a class="bar-button" href="/place-order/london-fog">London Fog</a> <a class="bar-button" href="/place-order/hot-chocolate">Hot Chocolate</a> <a class="bar-button" href="/place-order/iced-tea">Iced Tea</a></div></div><!----><!----></main><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_2h60pm = {
-						base: new URL(".", location).pathname.slice(0, -1),
+					__sveltekit_ilzbkq = {
+						base: "/hebrews-coffee-site",
 						assets: "/hebrews-coffee-site"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D-j50wLN.js"),
-						import("./_app/immutable/entry/app.CGPmaplP.js")
+						import("/hebrews-coffee-site/_app/immutable/entry/start.C5QvC3Uf.js"),
+						import("/hebrews-coffee-site/_app/immutable/entry/app.D4XaPhHc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
