--- a/hebrews-coffee-site/.svelte-kit/output/prerendered/pages/index.html
+++ b/hebrews-coffee-site/.svelte-kit/output/prerendered/pages/index.html
@@ -6,28 +6,29 @@
 		
 		<link href="/hebrews-coffee-site/_app/immutable/assets/0.BdpqRjtK.css" rel="stylesheet">
 		<link href="/hebrews-coffee-site/_app/immutable/assets/app.Db6sXKQR.css" rel="stylesheet">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/entry/start.C5QvC3Uf.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/D-Lfi2MX.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/mZYaVlXh.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/4tRy_9DW.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/entry/app.D4XaPhHc.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/entry/start.BPe0jLB7.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/r3tN5Qs3.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/B3Yr4pq7.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/D7JtEr4O.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/Cw4pzU6C.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/entry/app.2IWTkbVt.js">
 		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/DsnmJJEf.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/YaMAKQ02.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/ihxhlco1.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/BvnH6WBI.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/GZJ2z3rj.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/nodes/0.D9VCZPon.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/0z1sJvhk.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/Zq5Smagp.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/C3qje7M7.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/nodes/2.CxTD5V3A.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/BKURqBGS.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/Dkbn17K0.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/DgrQxfD2.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/B8zlTyjN.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/nodes/0.CIjE-wOD.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/pDtgKXZk.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/A4WjF5gX.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/CH9_Thn8.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/nodes/2.BFTmKe14.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><header class="top-bar svelte-158cp0c"><button class="hamburger-menu-icon svelte-158cp0c"><img src="/hebrews-coffee-site/icons/hamburger_menu.svg" alt="Menu" class="svelte-158cp0c"/></button> <a class="logo-button svelte-158cp0c" href="/"><img src="/hebrews-coffee-site/icons/logo.svg" alt="Hebrews Coffee Logo" class="logo svelte-158cp0c"/></a> <div class="login-link svelte-158cp0c"><a href="/login" class="svelte-158cp0c">LOGIN</a></div></header> <div class="side-menu svelte-158cp0c"><button class="menu-close-icon svelte-158cp0c"><img src="/hebrews-coffee-site/icons/x_icon.svg" alt="Close Menu" class="svelte-158cp0c"/></button> <nav class="svelte-158cp0c"><a href="/" class="svelte-158cp0c">Home</a> <a href="/place-order" class="svelte-158cp0c">Place Order</a> <a href="/check-order" class="svelte-158cp0c">Check Order Status</a></nav> <div id="login" class="svelte-158cp0c"><a href="/login" class="svelte-158cp0c">Login</a></div></div> <main class="svelte-158cp0c"><!----><!----><div class="order-buttons"><a class="bar-button" href="/place-order">Place Order</a> <a class="bar-button" href="/check-order">Check Order Status</a></div><!----><!----></main><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><header class="top-bar svelte-158cp0c"><button class="hamburger-menu-icon svelte-158cp0c"><img src="/hebrews-coffee-site/icons/hamburger_menu.svg" alt="Menu" class="svelte-158cp0c"/></button> <a class="logo-button svelte-158cp0c" href="/hebrews-coffee-site/"><img src="/hebrews-coffee-site/icons/logo.svg" alt="Hebrews Coffee Logo" class="logo svelte-158cp0c"/></a> <div class="login-link svelte-158cp0c"><a href="/hebrews-coffee-site/login" class="svelte-158cp0c">LOGIN</a></div></header> <div class="side-menu svelte-158cp0c"><button class="menu-close-icon svelte-158cp0c"><img src="/hebrews-coffee-site/icons/x_icon.svg" alt="Close Menu" class="svelte-158cp0c"/></button> <nav class="svelte-158cp0c"><a href="/hebrews-coffee-site/" class="svelte-158cp0c">Home</a> <a href="/hebrews-coffee-site/place-order" class="svelte-158cp0c">Place Order</a> <a href="/hebrews-coffee-site/check-order" class="svelte-158cp0c">Check Order Status</a></nav> <div id="login" class="svelte-158cp0c"><a href="/hebrews-coffee-site/login" class="svelte-158cp0c">Login</a></div></div> <main class="svelte-158cp0c"><!----><!----><div class="order-buttons"><a class="bar-button" href="/hebrews-coffee-site/place-order">Place Order</a> <a class="bar-button" href="/hebrews-coffee-site/check-order">Check Order Status</a></div><!----><!----></main><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_ilzbkq = {
+					__sveltekit_1u5scvy = {
 						base: "/hebrews-coffee-site",
 						assets: "/hebrews-coffee-site"
 					};
@@ -35,8 +36,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/hebrews-coffee-site/_app/immutable/entry/start.C5QvC3Uf.js"),
-						import("/hebrews-coffee-site/_app/immutable/entry/app.D4XaPhHc.js")
+						import("/hebrews-coffee-site/_app/immutable/entry/start.BPe0jLB7.js"),
+						import("/hebrews-coffee-site/_app/immutable/entry/app.2IWTkbVt.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
