--- a/hebrews-coffee-site/.svelte-kit/output/prerendered/pages/place-order/index.html
+++ b/hebrews-coffee-site/.svelte-kit/output/prerendered/pages/place-order/index.html
@@ -4,23 +4,23 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/entry/start.CHkxe2DN.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/BbHf168v.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/B3Yr4pq7.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/D7JtEr4O.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/DS9ZxsbQ.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/entry/app.Cnb9nvdr.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/entry/start.CbHB_lm3.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/C6Z2_Q8O.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/B9VogUKh.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/CednUaVI.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/EhsBt0o4.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/entry/app.CJi4Vagy.js">
 		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/DsnmJJEf.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/BKURqBGS.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/Dkbn17K0.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/DgrQxfD2.js">
-		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/B8zlTyjN.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/nEk7PoAX.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/BZmv0-94.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/BqfYsc1i.js">
+		<link rel="modulepreload" href="/hebrews-coffee-site/_app/immutable/chunks/DS5nTQr6.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1n4rzsl = {
+					__sveltekit_1r8rar8 = {
 						base: "/hebrews-coffee-site",
 						assets: "/hebrews-coffee-site"
 					};
@@ -28,8 +28,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/hebrews-coffee-site/_app/immutable/entry/start.CHkxe2DN.js"),
-						import("/hebrews-coffee-site/_app/immutable/entry/app.Cnb9nvdr.js")
+						import("/hebrews-coffee-site/_app/immutable/entry/start.CbHB_lm3.js"),
+						import("/hebrews-coffee-site/_app/immutable/entry/app.CJi4Vagy.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
